# ros2

./: README.md
install/: local_setup.sh  setup.sh
install/my_mvsim_pkg/share/my_mvsim_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_py_pkg/lib/my_py_pkg/: parameter_example  rectangle_server
install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
install/my_robot_bringup/share/my_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build  latest_list
my_py_pkg/: package.xml  setup.py
my_py_pkg/my_py_pkg/: controlador_robot.py  mostrar_puntos.py  pure_pursuit.py
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: my_robot_elevation.launch.py  number_app.launch.py
my_robot_bringup/worlds/: basejackal.dae  camera.sensor.xml  demo_depth_camera_ros2.rviz  demo_elevation_map.world.xml  gnss.sensor.xml  helios-32-FOV-31.sensor.xml  jackal.vehicle.xml  lidar2d.sensor.xml  mvsim_ros2_params.yaml  rgbd_camera.sensor.xml  rplidar-a2.sensor.xml  velodyne-vlp16.sensor.xml
src/my_mvsim_pkg/: CMakeLists.txt  package.xml
src/my_mvsim_pkg/worlds/: demo_elevation_map.world.xml
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: my_first_node.py  parameter_example.py  rectangle_server.py  smartphone.py
src/my_robot_bringup/launch/: my_robot_elevation.launch.py  my_robot_example.launch.py
src/my_robot_bringup/worlds/: demo_elevation_map.world.xml
src/my_robot_interfaces/: CMakeLists.txt
(+16 files in other folders)
